--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css"/>
+    <link rel="stylesheet" href="./pages/index.css" />
     <title>Путешествие по России</title>
   </head>
   <body class="root">
@@ -15,8 +15,8 @@
           src="./images/header-logo.svg"
           alt="логотип Россия"
         />
-        <a class="header__lang-link header__lang-link_active" href="#">RU</a>
-        <a class="header__lang-link" href="#">EN</a>
+        <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
+        <a class="header__lang-link" href="#">En</a>
       </header>
       <main>
         <section class="lead">
@@ -285,14 +285,15 @@
           <a
             class="cover__overlay"
             href="https://stampsy.com/na-elektrichkakh-do-baikala"
-          ></a>
-          <div class="cover__content">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle">
-              По мотивам учебной темы о Транссибе — путешествие от столицы до
-              Байкала на электричках.
-            </p>
-          </div>
+          >
+            <div class="cover__content">
+              <h2 class="cover__title">До Байкала «на собаках»</h2>
+              <p class="cover__subtitle">
+                По мотивам учебной темы о Транссибе — путешествие от столицы до
+                Байкала на электричках.
+              </p>
+            </div>
+          </a>
         </section>
       </main>
       <footer class="footer">
